# MAGPIE

./: .gitignore  BAI_UTILITY_AB_RESULTS.md  BENCHMARK_RESULTS.txt  BENCH_NOTES.md  CLAUDE.md  CLAUDE_ADVICE_AND_INSTRUCTIONS_FOR_GEMINI.md  CMakeLists.txt  CURRENT_TASK.md  GEMINI_ADVICE_AND_INSTRUCTIONS_FOR_CLAUDE.md  INFERENCE_BENCHMARK_RESULTS.md  INFERENCE_CUTOFF_OPTIMIZATION.md  INFERENCE_CUTOFF_PROJECT_HISTORY.md  LICENSE.md  Makefile  Makefile-wasm  Makefile.orig  OPENING_RACKS_REPORT.md  PLAN.md  PLAN_BAI_CUSTOM_UTILITY.md  PLAN_WOOGLES.md  PROJECT_PLAN.md  PR_DESCRIPTION.md  PR_TITLE.txt  README.md  ROADMAP.md  SESSION_SUMMARY.md  THREADING_IMPLEMENTATION.md  bai_files.txt  build_qtpie.sh  commands.txt  convert_lexica.sh  cppcheck.sh  create_normal_data.py  debug.txt  debug_inference_gp.sh  download_data.sh  download_test_data.sh  find_circ_deps.py  format.py  go.work  (+37 more)
.github/workflows/: docs.yml  pgo-performance.yml  run-tests.yml  temporary-pgo-x86.yml  test-go.yml  test-wasm.yml  validate-versioned-tarballs.yml
cmd/: magpie.c
core/: Makefile  Makefile-wasm  cors_server.py  gen_anvodou  gen_anvodou_after_fix  run  wasm_shell.html
core/cmd/: magpie.c
core/src/: alphabet.c  alphabet.h  anchor.c  anchor.h  autoplay.c  autoplay.h  bag.c  bag.h  board.c  board.h  cgp.c  cgp.h  command.c  command.h  config.c  config.h  constants.h  cross_set.c  cross_set.h  error_status.c  error_status.h  file_handler.c  file_handler.h  fileproxy.c  fileproxy.h  gaddag.c  gaddag.h  game.c  game.h  game_event.c  game_event.h  game_history.c  (+69 more)
create_data/: go.mod  go.sum  main.go  test_laddag
dev/: cgp.go  go.mod  go.sum  infer_gcg.go  main.go  many_moves.gcg  six_exchange.gcg  six_pass.gcg  standard.gcg  test.go
docs/: ABDADA_BENCHMARKS.md  benchmark_infrastructure.md  clock_management_design.md  common_pitfalls.md  development_patterns.md  dynamic_leave_design.md  endgame_speed.md  index.md  inference_bugs_and_fixes.md  inference_strategy_analysis.md  inference_tournament_results.md  killer_draws.md  kwgmaker_benchmark_analysis.md  kwgmaker_optimization_notes.md  peg_optimizations.md  peg_strategy.md  play_move_optimization.md  positional_heuristic_design.md  qt-qml-debugging-guide.md
examples/: generate_moves.c  magpie.py
goentry/: engine.go  engine_test.go  go.mod
hooks/: build_version.py
letterbox/: INDEX.md  Letterbox.icns  Letterbox.pro  Makefile  README.md  README_WORD_STUDY.md  SESSION_NOTES_2025-12-10.md  SIDEBAR_SPACING_ISSUE.md  WORD_STUDY_API_REFERENCE.md  WORD_STUDY_FUNCTIONS.md  WORD_STUDY_IMPLEMENTATION_GUIDE.md  alphagram_box.cpp  alphagram_box.h  completion_stats_dialog.cpp  completion_stats_dialog.h  dark_mode.m  generate_icon.py  hover_aware_text_browser.cpp  hover_aware_text_browser.h  letterbox.qrc  letterbox_window.cpp  letterbox_window.h  magpie_wrapper.c  magpie_wrapper.h  main.cpp  moc_alphagram_box.cpp  moc_letterbox_window.cpp  moc_predefs.h  moc_word_list_dialog.cpp  qrc_letterbox.cpp  run.sh  test_hooks  test_hooks.c  test_pattern  test_pattern.cpp  word_list_dialog.cpp  word_list_dialog.h
lib/: .gitignore
maggi/: Makefile  board_view.c  board_view.h  colors.h  graphic_assets.c  graphic_assets.h  maggi.c  square_view.c  square_view.h  widget_layout.c  widget_layout.h
notes/: 2026-05-28-nested-vs-flat-rollout-divergence.md  pegN_pond_iiia.md  peg_api_design.h  run_bracket.sh  run_confirm.sh  run_scale_and_confirm.sh  sigmoid_sweep_analyze.py  sigmoid_sweep_arm.sh  sigmoid_utility_sweep.md
overrides/: main.html
qtpie/: .gitignore  BOARD_RENDERING.md  CURRENT_TASK.md  QtPie-Info.plist  QtPie.pro  README.md  TURN_ENTRY_DEBUG.md  blank_designation_dialog.cpp  blank_designation_dialog.h  board_panel_view.cpp  board_panel_view.h  board_renderer.cpp  board_renderer.h  board_view.cpp  board_view.h  colors.cpp  colors.h  game_history_panel.cpp  game_history_panel.h  magpie_wrapper.c  magpie_wrapper.h  main.cpp  rack_view.cpp  rack_view.h  responsive_layout.cpp  responsive_layout.h  run_with_monitor.sh  style_test.cpp  style_test.pro  tile_renderer.cpp  tile_renderer.h  turn_entry_widget.cpp  turn_entry_widget.h
test/: alias_method_test.c  alias_method_test.h  alphabet_test.c  alphabet_test.h  analyze_test.c  analyze_test.h  autoplay_test.c  autoplay_test.h  bag_test.c  bai_peg_test.c  bai_peg_test.h  bai_test.c  bai_test.h  bai_utility_test.c  bai_utility_test.h  benchmark_endgame_test.c  benchmark_endgame_test.h  benchmark_optimizations_test.c  benchmark_optimizations_test.h  benchmark_peg_test.c  benchmark_peg_test.h  benchmark_sim_test.c  benchmark_sim_test.h  benchmark_word_prune_test.c  benchmark_word_prune_test.h  bingo_detect_test.c  bingo_detect_test.h  bingo_exists_test.c  bingo_exists_test.h  bingo_probs_test.c  bingo_probs_test.h  bit_rack_test.c  board_layout_default_test.c  board_layout_super_test.c  board_test.c  board_test.h  brute_dictionary_test.c  brute_dictionary_test.h  cgp_test.c  cgp_test.h  (+187 more)
tests/: tst_board.qml  tst_dragdrop.qml  tst_ui.cpp
tools/: eg_ab.sh  eg_final.sh  eg_match.py  eg_playout_ab.sh  offline_greedy.c  offline_greedy_README.md  opening_racks_report.py  pgo_leavegen_racks.txt  pgo_train.c
tui/: NOTES_game_session.md  NOTES_input_design.md  NOTES_render_performance.md  NOTES_woogles_integration.md  NOTES_xtables_search.md  TODO_v1.md  annotate_rack_test.sh  bot_worker.c  bot_worker.h  cgp_copy_test.sh  config.c  config.h  frame_dump.c  frame_dump.h  game_render.c  game_render.h  game_state.c  game_state.h  glyph_cache.c  glyph_cache.h  headless.sh  keys.sh  lexicon_picker.c  lexicon_picker.h  mach_compat.h  main.c  move_entry.c  move_entry.h  move_entry_test.sh  onboarding.c  onboarding.h  play_vs_computer_test.sh  preview_game.c  preview_game.h  remote.sh  screenshot.sh  settings_test.sh  theme.c  theme.h  time_picker.c  (+3 more)
wasmentry/: PACKAGING.md  README.md  WEBWORKER.md  api.c  cors_server.py  package.json  playwright.config.ts  server.py  test-main-thread.html  test-profile.html  test-wasm64.html  test-worker.html  wasm-worker.js
webui/: README.md  app.js  board.js  index.html  serve.py  style.css
(+935 files in other folders)
